Fix Sculpt mask enable/disable does not update drawing immediatelly

Reported as part of T59576.